--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Meskhi2000</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/noname12 wre.png">
+  <link rel="icon" type="image/x-icon" href="logo3-Photoroom.png">
 </head>
 <body>
   <app-root></app-root>
